--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/chintuweberse'"
+            onclick="location.href='https://github.com/ChintuTech'"
           />
         </div>
       </div>
