--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
-          <!-- <li><a href="#projects">Projects</a></li> -->
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -52,7 +52,7 @@
             Download CV
           </button>
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
-            Contact Info
+            Hire Me
           </button>
         </div>
         <div id="socials-container">
@@ -170,7 +170,7 @@ technologies.
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -185,15 +185,15 @@ technologies.
                 </div>
               </article>
               <article>
-                <!-- <img
+                <img
                   src="./assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
-                /> -->
+                />
                 <div>
-                  <!-- <h3>Material UI</h3>
+                  <h3>React JS</h3>
                   <p>Intermediate</p>
-                </div> -->
+                </div>
               </article>
             </div>
           </div>
@@ -255,7 +255,7 @@ technologies.
         onclick="location.href='./#projects'"
       />
     </section>
-    <!-- <section id="projects">
+    <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
@@ -263,28 +263,28 @@ technologies.
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/port.png"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Portfolio</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/ChintuTech'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://my-portfolio-sonowy-mu-84.vercel.app/'"
               >
                 Live Demo
               </button>
             </div>
           </div>
-          <div class="details-container color-container">
+          <!-- <div class="details-container color-container">
             <div class="article-container">
               <img
                 src="./assets/project-2.png"
@@ -339,8 +339,8 @@ technologies.
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
-      />
-    </section> -->
+      /> -->
+    </section>
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
       <h1 class="title">Contact Me</h1>
