--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">Chintu</div>
+      <!-- <img src="./assets/logo.png" alt="" class="img-logo"> -->
+      <div class="logo"> <i>Chintu</i></div>
       <div>
         <ul class="nav-links">
+          <li><a href="#">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
           <li><a href="#projects">Projects</a></li>
@@ -47,7 +49,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Chintu.pdf')"
+            onclick="window.open('./assets/pritam.pdf')"
           >
             Download CV
           </button>
@@ -106,7 +108,7 @@
           <div class="text-container">
             <p>
               Dedicated MERN Stack Developer with one year of hands-on
-experience in web development. Committed to delivering highquality solutions, adept at collaborating with cross-functional
+experience in web development. Committed to delivering high quality solutions, adept at collaborating with cross-functional
 teams, and passionate about staying current with emerging
 technologies.
 
